--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <span>Angular 6 - MEAN Stack Sample Application</span>
+    <h1>Angular 6 - MEAN Stack Sample Application</h1>
 </mat-toolbar>
 <div>
     <router-outlet></router-outlet>
